trying to fix blur on mobile

--- a/themes/LoveIt/assets/css/_core/_header.scss
+++ b/themes/LoveIt/assets/css/_core/_header.scss
@@ -65,6 +65,7 @@ header {
   height: var(--header-height);
   line-height: var(--header-height);
   backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 
   [data-header-desktop=normal] & {
     position: static;
@@ -121,6 +122,7 @@ header {
   height: var(--header-height);
   line-height: var(--header-height);
   backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 
   [data-header-mobile=normal] & {
     position: static;
